# scene-3d-compat-test

./: .gitignore  LICENSE  README.md  compat_test.py  pyproject.toml
assets/: human.stl
